{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 45,
  "lineage": "f4a445ac-f375-ed6f-86b4-80ab87169b40",
  "resources": [
    {
      "module": "module.vpc_peering_cross_account",
      "mode": "data",
      "type": "aws_vpc",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591642074504:vpc/vpc-0b91ff13acad70690",
            "cidr_block": "172.26.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-065c2756715653864",
                "cidr_block": "172.26.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-5dfcae27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b91ff13acad70690",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a9ed8a70d68ff6cd",
            "owner_id": "591642074504",
            "tags": {
              "Name": "demo-dr-vpc",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-destination",
              "temporary": "yes",
              "terraform": "yes"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering_cross_account",
      "mode": "data",
      "type": "aws_vpc",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:591642074504:vpc/vpc-074ec1f61d0da2bab",
            "cidr_block": "172.25.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03340e3ea7c916980",
                "cidr_block": "172.25.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b45637df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074ec1f61d0da2bab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c75312ac678cd51",
            "owner_id": "591642074504",
            "tags": {
              "Name": "demo-source-vpc",
              "client": "edmentum",
              "owner": "sai",
              "project": "cloudendure to elastic DR",
              "site": "demo-source",
              "temporary": "yes",
              "terraform": "yes"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering_cross_account",
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.25.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-077e636152d27eed83013956833",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-077e636152d27eed8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection_accepter.accepter",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_route_tables.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.requester"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.25.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d8a5a4480d63293c3013956833",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d8a5a4480d63293c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection_accepter.accepter",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_route_tables.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.requester"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.25.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9ed8a70d68ff6cd3013956833",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9ed8a70d68ff6cd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection_accepter.accepter",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_route_tables.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.requester"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.25.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07327e4aa6f41d1453013956833",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07327e4aa6f41d145",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection_accepter.accepter",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_route_tables.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.requester"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_cross_account",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.26.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0317d4ab6b0ff467f1026183938",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0317d4ab6b0ff467f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_route_tables.requester",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.requester"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.26.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed53c97c0453732b1026183938",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed53c97c0453732b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_route_tables.requester",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.requester"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.26.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f9675157d1fb558f1026183938",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9675157d1fb558f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_route_tables.requester",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.requester"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.26.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c75312ac678cd511026183938",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c75312ac678cd51",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_route_tables.requester",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter",
            "module.vpc_peering_cross_account.data.aws_vpc.requester"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_cross_account",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": false,
            "id": "pcx-06247452f3cc318b0",
            "peer_owner_id": "591642074504",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0b91ff13acad70690",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "vpc-074ec1f61d0da2bab-vpc-0b91ff13acad70690",
              "Side": "Requester"
            },
            "tags_all": {
              "Name": "vpc-074ec1f61d0da2bab-vpc-0b91ff13acad70690",
              "Side": "Requester"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab"
          },
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_cross_account",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-06247452f3cc318b0",
            "peer_owner_id": "591642074504",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0b91ff13acad70690",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "vpc-074ec1f61d0da2bab-vpc-0b91ff13acad70690",
              "Side": "Accepter"
            },
            "tags_all": {
              "Name": "vpc-074ec1f61d0da2bab-vpc-0b91ff13acad70690",
              "Side": "Accepter"
            },
            "vpc_id": "vpc-074ec1f61d0da2bab",
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_cross_account",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-06247452f3cc318b0",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection_accepter.accepter",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering_cross_account",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-06247452f3cc318b0",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-06247452f3cc318b0"
          },
          "dependencies": [
            "data.terraform_remote_state.accepter",
            "data.terraform_remote_state.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection.requester",
            "module.vpc_peering_cross_account.aws_vpc_peering_connection_accepter.accepter",
            "module.vpc_peering_cross_account.data.aws_caller_identity.peer",
            "module.vpc_peering_cross_account.data.aws_region.peer",
            "module.vpc_peering_cross_account.data.aws_vpc.accepter"
          ]
        }
      ]
    }
  ]
}